; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_repo_last_modify.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_repo_last_modify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_BAD_ARGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Argument should not be null\00", align 1
@seaf = common dso_local global %struct.TYPE_5__* null, align 8
@SEAF_ERR_BAD_REPO = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"No such repository\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seafile_repo_last_modify(i8* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 0, i32* %7, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %15, label %10

10:                                               ; preds = %2
  %11 = load i32**, i32*** %5, align 8
  %12 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %13 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %14 = call i32 @g_set_error(i32** %11, i32 %12, i32 %13, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %33

15:                                               ; preds = %2
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** @seaf, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %4, align 8
  %20 = call %struct.TYPE_4__* @seaf_repo_manager_get_repo(i32 %18, i8* %19)
  store %struct.TYPE_4__* %20, %struct.TYPE_4__** %6, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %22 = icmp ne %struct.TYPE_4__* %21, null
  br i1 %22, label %28, label %23

23:                                               ; preds = %15
  %24 = load i32**, i32*** %5, align 8
  %25 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %26 = load i32, i32* @SEAF_ERR_BAD_REPO, align 4
  %27 = call i32 @g_set_error(i32** %24, i32 %25, i32 %26, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %3, align 4
  br label %33

28:                                               ; preds = %15
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %7, align 4
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %28, %23, %10
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*) #1

declare dso_local %struct.TYPE_4__* @seaf_repo_manager_get_repo(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
